[package]
name = "lunars"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Api dependencies
nickel = "0.11.0"
serde = { version = "1.0.144", features = ["derive"] }
hyper = "0.14.20"

# Common
substring = "1.4.5"
serde_json = "1.0.85"
dotenv = "0.15.0"
chrono = "0.4"

# Cryptography
sha256 = "1.0.3"

# Nickel fix ur shit
regex = "1.6.0"

# Database
rusqlite = { version = "0.28.0", features = ["bundled"] }

# Log
log = "0.4.17"
flexi_logger = "0.23.0"