[package]
name = "lunars"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Api dependencies
rocket = { version = "0.5.1", features = ["json"] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_mysql"] }

serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0.127" }

# Common
substring = "1.4.5"
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }

# Cryptography
sha256 = "1.0.3"

# Database
sqlx = { version = "0.7.0", features = ["runtime-tokio", "mysql", "macros", "migrate", "chrono"] }

# Log
log = "0.4.17"
tokio = { version = "1.40.0", features = ["full"] }
