[package]
name = "lunars"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "lunars"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Api dependencies
rocket = { version = "0.5.1", features = ["json"] }
rocket_db_pools = { version = "0.2.0", features = ["sqlx_mysql"] }
rocket_okapi = { git = "https://github.com/Kindness-Works/okapi", branch = "beyera/update-rocket-0.5.1", features = ["swagger"] }
schemars = { version = "0.8.21", features = ["chrono"]}

serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0.127" }

# Common
substring = "1.4.5"
dotenv = "0.15.0"
chrono = { version = "0.4.38", features = ["serde"] }

# Cryptography
sha2 = "0.10.8"

# Database
sqlx = { version = "0.7.0", features = ["runtime-tokio", "mysql", "macros", "migrate", "chrono"] }

# Log
log = "0.4.17"
tokio = { version = "1.40.0", features = ["full"] }
rocket_cors = "0.6.0"
hex = "0.4.3"
simplelog = "0.12.2"

